<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/developer_profile"
        android:contentDescription="@string/developer_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favorite"
        android:icon="@drawable/favorite_icon"
        android:title="@string/developer_profile"
        android:contentDescription="@string/developer_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:title="@string/list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_grid"
        android:title="@string/grid"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cardview"
        android:title="@string/with_cardview"
        app:showAsAction="never"/>
</menu>